--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "async-mutex": "^0.3.0",
     "handlebars": "^4.7.6",
     "polyfill-library": "^3.101.0",
+    "save-svg-as-png": "^1.4.17",
     "serve-static": "^1.14.1",
     "socket.io": "^3.0.5"
   },
